[gd_scene load_steps=7 format=3 uid="uid://bsy0hxfsr4gxw"]

[ext_resource type="Script" path="res://scenes/pickup.gd" id="1_w2ewi"]
[ext_resource type="Texture2D" uid="uid://cadyiotj0oah5" path="res://assets/ingredients/cackling_caramel.png" id="2_x53m4"]
[ext_resource type="Material" uid="uid://cxpp78ydejvia" path="res://assets/effects/poof.tres" id="3_1tyfe"]
[ext_resource type="Texture2D" uid="uid://b2lldoqoqryc6" path="res://assets/particles/fupi_smoke1.png" id="4_31xah"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bedei"]
radius = 48.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ech3c"]
radius = 24.0

[node name="Pickup" type="CharacterBody2D" groups=["pickups"]]
collision_layer = 130
collision_mask = 6
motion_mode = 1
platform_on_leave = 2
script = ExtResource("1_w2ewi")

[node name="PickupArea" type="Area2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
collision_layer = 129

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource("CircleShape2D_bedei")

[node name="Sprite" type="Sprite2D" parent="PickupArea"]
unique_name_in_owner = true
z_index = 1
y_sort_enabled = true
scale = Vector2(3, 3)
texture = ExtResource("2_x53m4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ech3c")

[node name="PoofEffect" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
z_index = 1
emitting = false
amount = 16
process_material = ExtResource("3_1tyfe")
texture = ExtResource("4_31xah")
lifetime = 0.2
one_shot = true
explosiveness = 1.0

[connection signal="finished" from="PoofEffect" to="." method="_on_poof_effect_finished"]
